--- a/src/client/components/Paddle/Paddle.module.css
+++ b/src/client/components/Paddle/Paddle.module.css
@@ -1,5 +1,7 @@
 .paddle {
   position: absolute;
+  width: var(--paddle-width);
+  height: var(--paddle-height);
   background-color: var(--primary-color);
   box-shadow: 0 0 10px var(--primary-color);
   transition: top 0.1s ease-out;
@@ -10,7 +12,9 @@
 }
 
 .left {
+  left: var(--paddle-margin);
 }
 
 .right {
+  right: var(--paddle-margin);
 }
